--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
-    "next": "latest",
+    "next": "15.2.0",
     "next-auth": "5.0.0-beta.29",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
